--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,11 +7,17 @@ html, body{
     padding: 1em;
     margin-bottom: 1em;
 }
+
 #menu a{
     margin: 0 1em;
     padding-bottom: 0.5em;
     border-bottom: 2px solid #ccc;
     text-decoration: none;
+}
+
+#wrapper {
+    max-width: 1024px;
+    margin: auto;
 }
 
 #errors{
